--- a/README
+++ b/README
@@ -76,7 +76,7 @@ Contributing
 
 1. Fork it.
 2. Create a branch (`git checkout -b MarshalZ4-Python`)
-3. Commit your changes (`git commit -am "Saber Chafrouda"`)
+3. Commit your changes (`git commit -am )
 4. Push to the branch (`git push origin MarshalZ4-Python`)
 5. Create an [Issue][1] with a link to your branch
 6. Enjoy a refreshing Diet Coke and wait
